# rpg_trajectory_evaluation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
analyze_trajectories_config/: .gitignore  euroc_vio_mono_stereo.yaml  euroc_vislam_mono.yaml
results/euroc_mono_stereo/laptop/vio_mono/laptop_vio_mono_MH_03/: stamped_traj_estimate.txt
results/euroc_mono_stereo/laptop/vio_mono/laptop_vio_mono_MH_05/: stamped_traj_estimate.txt
results/euroc_mono_stereo/laptop/vio_mono/laptop_vio_mono_V2_01/: stamped_traj_estimate.txt
results/laptop/vio_mono/laptop_vio_mono_V2_02/: stamped_traj_estimate.txt
results/laptop/vio_mono/laptop_vio_mono_V2_03/: stamped_traj_estimate.txt
results/laptop/vio_stereo/laptop_vio_stereo_MH_01/: stamped_traj_estimate.txt
results/laptop/vio_stereo/laptop_vio_stereo_V2_02/: eval_cfg.yaml
scripts/: add_path.py  analyze_trajectories.py  analyze_trajectory_single.py  analyze_trajs.sh  change_eval_cfg_recursive.py  cp_conf.sh  fn_constants.py  overall_odometry_errors.py  recursive_clean_results_dir.py
scripts/dataset_tools/: asl_groundtruth_to_pose.py  bag_to_pose.py  stamp_state_est.py  stamp_state_est_using_matches.py  strip_gt_id.py  transform_trajectory.py
src/rpg_trajectory_evaluation/: align_trajectory.py  align_utils.py  associate_timestamps.py  compute_trajectory_errors.py  metrics.py  multiple_traj_errors.py  plot_utils.py  results_writer.py  trajectory.py  trajectory_loading.py  trajectory_utils.py  transformations.py
utils/: commands.txt  run_analyzer.sh
(+228 files in other folders)
